--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             <a href="index.html"><img id="scissors-logo" src="assets/favicon/scissors-logo.png" alt="Scissors Logo"> Rock, Paper, Scissors!</a>
         </h1>
     </header>
+
+    <main>
+        <p>Main content</p>
+    </main>
+
+    <footer>
+        <p><a href="https://github.com/85rhrl" target="_blank" rel="noopener" aria-label="GitHub profile link (opens in a new tab)">Follow me on GitHub <i class="fa-brands fa-square-github"></i></a></p>
+    </footer>
+    <!-- Font Awesome script -->
+    <script src="https://kit.fontawesome.com/bc95310ae3.js" crossorigin="anonymous"></script>
+    <!-- Java script -->
     <script src="index.js"></script>
 </body>
 </html>
