replaced main content placeholder with images of rock, paper and scissors

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
     </header>
 
     <main>
-        <p>Main content</p>
+        <p>Choose Rock, Paper or Scissors:</p>
+        <img src="assets/images/rock.png" alt="rock">
+        <img src="assets/images/paper.png" alt="paper">
+        <img src="assets/images/scissors.png" alt="scissors">
     </main>
 
     <footer>
         <p><a href="https://github.com/85rhrl" target="_blank" rel="noopener" aria-label="GitHub profile link (opens in a new tab)">Follow me on GitHub <i class="fa-brands fa-square-github"></i></a></p>
     </footer>
+    
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/bc95310ae3.js" crossorigin="anonymous"></script>
     <!-- Java script -->
