center choice images and apply padding

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     </header>
 
     <main>
-        <p>Choose Rock, Paper or Scissors:</p>
-        <img src="assets/images/rock.png" alt="rock">
-        <img src="assets/images/paper.png" alt="paper">
-        <img src="assets/images/scissors.png" alt="scissors">
+        <h2>Choose Rock, Paper or Scissors:</h2>
+        <section class="choices">
+            <img src="assets/images/rock.png" alt="rock">
+            <img src="assets/images/paper.png" alt="paper">
+            <img src="assets/images/scissors.png" alt="scissors">
+        </section>
     </main>
 
     <footer>
