--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main>
         <h2>Choose Rock, Paper or Scissors:</h2>
         <section class="choices">
-            <img src="assets/images/rock.png" alt="rock">
-            <img src="assets/images/paper.png" alt="paper">
-            <img src="assets/images/scissors.png" alt="scissors">
+            <button class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png" alt="rock"></button>
+            <button class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper"></button>
+            <button class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img src="assets/images/scissors.png" alt="scissors"></button>
         </section>
     </main>
 
