add player and cpu sections with placeholder image

--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
             <button class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper"></button>
             <button class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img src="assets/images/scissors.png" alt="scissors"></button>
         </section>
+
+        <div class="player-cpu">
+            <section class="player">
+                <h3>Player</h3>
+                <img id="player-image" src="assets/images/rock-paper-scissors.png" alt="rock-paper-scissors">
+                <h3>Score: <span id="player-score">0</span></h3>
+            </section>
+
+            <section class="cpu">
+                <h3>CPU</h3>
+                <img id="cpu-image" src="assets/images/rock-paper-scissors.png" alt="rock-paper-scissors">
+                <h3>Score: <span id="cpu-score">0</span></h3>
+            </section>
+        </div>
+
     </main>
 
     <footer>
