fixed jscript source in index.html and cpuImage.alt in mainGame

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/bc95310ae3.js" crossorigin="anonymous"></script>
     <!-- Java script -->
-    <script src="index.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
