add text description for options

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </header>
 
     <main>
-        <h2>Choose Rock, Paper or Scissors:</h2>
+        <h2>Choose one:</h2>
         <section class="choices">
-            <a class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png" alt="rock"></a>
-            <a class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper"></a>
-            <a class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img src="assets/images/scissors.png" alt="scissors"></a>
+            <a class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png" alt="rock">Rock</a>
+            <a class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper">Paper</a>
+            <a class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img src="assets/images/scissors.png" alt="scissors">Scissors</a>
         </section>
 
         <div class="player-cpu">
@@ -47,6 +47,8 @@
         </div>
 
         <h3 id="result"></h3>
+
+        <p class="rules">Rules: Rock beats Scissors, Scissors beat Paper, Paper beats Rock.</p>
 
     </main>
 
