--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <h2>Choose one:</h2>
+        <h2 class="choose">Choose one:</h2>
         <section class="choices">
             <a class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png" alt="rock">Rock</a>
             <a class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper">Paper</a>
