add ties h3 element

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             </section>
         </div>
 
+        <h3 id="ties"></h3>
+
         <h3 id="result"></h3>
 
         <p class="rules">Rules: Rock beats Scissors, Scissors beat Paper, Paper beats Rock.</p>
