--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
         </div>
 
-        <h3 id="ties"></h3>
+        <h3>Ties: <span id="ties">0</span></h3>
 
         <h3 id="result"></h3>
 
