add code comments, code formatting

--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
 
         <h3 class="ties-element">Ties: <span id="ties">0</span></h3>
 
+        <!-- JS updates this element's content-->
         <h3 id="result"></h3>
 
+        <!-- Rules -->
         <p class="rules">Rules: Rock beats Scissors, Scissors beat Paper, Paper beats Rock.</p>
 
     </main>
 
+    <!-- Footer -->
     <footer>
         <p><a href="https://github.com/85rhrl" target="_blank" rel="noopener" aria-label="GitHub profile link (opens in a new tab)">Follow me on GitHub <i class="fa-brands fa-square-github"></i></a></p>
     </footer>
