--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- Footer -->
     <footer>
-        <p><a href="https://github.com/85rhrl" target="_blank" rel="noopener" aria-label="GitHub profile link (opens in a new tab)">Follow me on GitHub <i class="fa-brands fa-square-github"></i></a></p>
+        <p><a href="https://github.com/85rhrl" target="_blank" rel="noopener" aria-label="Follow me on GitHub profile link (opens in a new tab)">Follow me on GitHub <i class="fa-brands fa-square-github"></i></a></p>
     </footer>
     
     <!-- Font Awesome script -->
