update choices class element into a div

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <main>
         <h2 class="choose">Choose one:</h2>
-        <section class="choices">
+        <div class="choices">
             <a class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png" alt="rock">Rock</a>
             <a class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper">Paper</a>
             <a class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img src="assets/images/scissors.png" alt="scissors">Scissors</a>
-        </section>
+        </div>
 
         <div class="player-cpu">
             <section class="player">
