add Reset Button to index.html and applied style in style.css

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <!-- Rules -->
         <p class="rules">Rules: Rock beats Scissors, Scissors beats Paper, Paper beats Rock.<br>To reset score, simply refresh the webpage.</p>
 
+        <!-- Reset Scores Button -->
+        <div class="reset-button">
+            <button class="reset-button">Reset Scores</button>
+        </div>
     </main>
 
     <!-- Footer -->
