--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- Reset Scores Button -->
         <div class="reset-button">
-            <button class="reset-button">Reset Scores</button>
+            <button class="reset-button" id="reset">Reset Scores</button>
         </div>
     </main>
 
