remove reset instructions from Rules

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h3 id="result"></h3>
 
         <!-- Rules -->
-        <p class="rules">Rules: Rock beats Scissors, Scissors beats Paper, Paper beats Rock.<br>To reset score, simply refresh the webpage.</p>
+        <p class="rules">Rules: Rock beats Scissors, Scissors beats Paper, Paper beats Rock.</p>
 
         <!-- Reset Scores Button -->
         <div class="reset-button">
