set proper format to css and html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,16 +21,20 @@
     <!-- Header -->
     <header>
         <h1 id="logo">
-            <a href="index.html"><img id="scissors-logo" src="assets/favicon/scissors-logo.png" alt="Scissors Logo"> Rock, Paper, Scissors!</a>
+            <a href="index.html"><img id="scissors-logo" src="assets/favicon/scissors-logo.png" alt="Scissors Logo">
+                Rock, Paper, Scissors!</a>
         </h1>
     </header>
 
     <main>
         <h2 class="choose">Choose one:</h2>
         <div class="choices">
-            <a class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png" alt="rock">Rock</a>
-            <a class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png" alt="paper">Paper</a>
-            <a class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img src="assets/images/scissors.png" alt="scissors">Scissors</a>
+            <a class="choice" data-choice="rock" aria-label="rock hand gesture"><img src="assets/images/rock.png"
+                    alt="rock">Rock</a>
+            <a class="choice" data-choice="paper" aria-label="paper hand gesture"><img src="assets/images/paper.png"
+                    alt="paper">Paper</a>
+            <a class="choice" data-choice="scissors" aria-label="scissors hand gesture"><img
+                    src="assets/images/scissors.png" alt="scissors">Scissors</a>
         </div>
 
         <div class="player-cpu">
@@ -62,12 +67,15 @@
 
     <!-- Footer -->
     <footer>
-        <p><a href="https://github.com/85rhrl/PP2" target="_blank" rel="noopener" aria-label="Check out the source code on GitHub link (opens in a new tab)">Check out the source code on GitHub! <i class="fa-brands fa-square-github"></i></a></p>
+        <p><a href="https://github.com/85rhrl/PP2" target="_blank" rel="noopener"
+                aria-label="Check out the source code on GitHub link (opens in a new tab)">Check out the source code on
+                GitHub! <i class="fa-brands fa-square-github"></i></a></p>
     </footer>
-    
+
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/bc95310ae3.js" crossorigin="anonymous"></script>
     <!-- Java script -->
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
