add Aria-label to Reset Scores Button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!-- Reset Scores Button -->
         <div class="reset-button">
-            <button class="reset-button" id="reset">Reset Scores</button>
+            <button class="reset-button" id="reset" aria-label="Reset Scores Button">Reset Scores</button>
         </div>
 
         <!-- Rules -->
